--- a/js/templates/lineChart.html
+++ b/js/templates/lineChart.html
@@ -3,6 +3,8 @@
         <h3 class="panel-title">Line Chart</h3>
     </div>
     <div class="panel-body">
-        Chart goes here....
+    	<div id="line-chart">
+        	<svg></svg>
+        </div>
     </div>
 </div>
