Play around with CSS

--- a/js/templates/pieChart.html
+++ b/js/templates/pieChart.html
@@ -2,7 +2,7 @@
     <div class="panel-heading">
         <h3 class="panel-title">Pie Chart</h3>
     </div>
-    <div class="panel-body">
+    <div class="panel-body chart">
     	<div id="pie-chart">
         	<svg></svg>
         </div>
