--- a/js/templates/lineChart.html
+++ b/js/templates/lineChart.html
@@ -2,7 +2,7 @@
     <div class="panel-heading">
         <h3 class="panel-title">Line Chart</h3>
     </div>
-    <div class="panel-body">
+    <div class="panel-body chart">
     	<div id="line-chart">
         	<svg></svg>
         </div>
