--- a/js/templates/accountsView.html
+++ b/js/templates/accountsView.html
@@ -1,9 +1,9 @@
 <div class="panel panel-default">
     <div class="panel-heading">
-        <h3 class="panel-title">Line Chart</h3>
+        <h3 class="panel-title">Accounts</h3>
     </div>
     <div class="panel-body chart">
-    	<div id="line-chart">
+    	<div id="accounts-chart">
         	<svg></svg>
         </div>
     </div>
