--- a/js/templates/investmentsView.html
+++ b/js/templates/investmentsView.html
@@ -1,9 +1,9 @@
 <div class="panel panel-default">
     <div class="panel-heading">
-        <h3 class="panel-title">Pie Chart</h3>
+        <h3 class="panel-title">Investments</h3>
     </div>
     <div class="panel-body chart">
-    	<div id="pie-chart">
+    	<div id="investments-chart">
         	<svg></svg>
         </div>
     </div>
